--- a/www/index.html
+++ b/www/index.html
@@ -23,7 +23,7 @@
   </nav>
 
   <!--Main Body-->
-  <h1>Hullo World!</h1>
+  <h1>Hello World!</h1>
     We are using Node.js <span id="node-version"></span>,
     Chromium <span id="chrome-version"></span>,
     and Electron <span id="electron-version"></span>.
