--- a/www/index.html
+++ b/www/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
+  <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP-->
   <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'">
   <meta http-equiv="X-Content-Security-Policy" content="default-src 'self'; script-src 'self'">
   <!--Import materialize.css-->
@@ -15,15 +15,15 @@
 <body>
   <nav>
     <div class="nav-wrapper">
-      <a href="#!" class="brand-logo" style="margin:10;">Logo</a>
+      <a href="#!" class="brand-logo">Logo</a>
       <ul class="right">
-        <li><a class="waves-effect waves-light btn">Button</a></li>
+        <li><a class="waves-effect waves-light btn">Button <i class="material-icons right">cloud</i></a></li>
       </ul>
     </div>
   </nav>
 
   <!--Main Body-->
-  <h1>Hello World!</h1>
+  <h1>Hullo World!</h1>
     We are using Node.js <span id="node-version"></span>,
     Chromium <span id="chrome-version"></span>,
     and Electron <span id="electron-version"></span>.
