color scheme implemented

--- a/www/index.html
+++ b/www/index.html
@@ -11,23 +11,31 @@
   <link type="text/css" rel="stylesheet" href="css/app.css" media="screen,projection" />
   <!--Let browser know website is optimized for mobile-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Haptic Jacket Controller</title>
 </head>
 
 <body>
   <nav>
     <div class="nav-wrapper">
-      <a href="#!" class="brand-logo">Logo</a>
+      <a href="#!" class="brand-logo">Haptic Jacket Controller</a>
       <ul class="right">
-        <li><a class="waves-effect waves-light btn">Button <i class="material-icons right">cloud</i></a></li>
+        <li><a class="waves-effect waves-light btn purple lighten-2">Configure<i
+              class="material-icons right">settings</i></a></li>
+        <li><a class="waves-effect waves-light btn purple lighten-2">Scan Nearby Modules<i
+              class="material-icons right">search</i></a></li>
       </ul>
     </div>
   </nav>
 
   <!--Main Body-->
-  <h1>Hullo World!</h1>
+  <div class="main-body">
+
+    <h1>Hullo World!</h1>
     We are using Node.js <span id="node-version"></span>,
     Chromium <span id="chrome-version"></span>,
     and Electron <span id="electron-version"></span>.
+
+  </div>
 
   <!--JavaScript at end of body for optimized loading-->
   <script type="text/javascript" src="js/materialize.min.js"></script>
