--- a/www/index.html
+++ b/www/index.html
@@ -19,6 +19,8 @@
     <div class="nav-wrapper">
       <a href="#!" class="brand-logo">Haptic Jacket Controller</a>
       <ul class="right">
+        <li><a class="waves-effect waves-light btn purple lighten-2">Help<i
+          class="material-icons right">help</i></a></li>
         <li><a class="waves-effect waves-light btn purple lighten-2">Configure<i
               class="material-icons right">settings</i></a></li>
         <li><a class="waves-effect waves-light btn purple lighten-2">Scan Nearby Modules<i
