--- a/www/index.html
+++ b/www/index.html
@@ -49,12 +49,7 @@
 
   <!--Main Body-->
   <div class="main-body">
-
-    <h1>Hullo World!</h1>
-    We are using Node.js <span id="node-version"></span>,
-    Chromium <span id="chrome-version"></span>,
-    and Electron <span id="electron-version"></span>.
-
+    <img src="img/jacket.png" alt="jacket">
   </div>
 
   <!--JavaScript at end of body for optimized loading-->
