--- a/www/index.html
+++ b/www/index.html
@@ -49,7 +49,7 @@
 
   <!--Main Body-->
   <div class="main-body">
-    <img src="img/jacket.png" alt="jacket">
+    <img src="img/jacket.png" alt="jacket" width="100%">
   </div>
 
   <!--JavaScript at end of body for optimized loading-->
