--- a/www/index.html
+++ b/www/index.html
@@ -30,28 +30,31 @@
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="msapplication-TileImage" content="favicon/ms-icon-144x144.png">
   <meta name="theme-color" content="#ffffff">
+  <!--p5.js add-->
+  <script src="./js/p5.min.js"></script>
+  <script src="./js/sketch.js"></script>
 </head>
 
+
 <body>
+
   <nav>
     <div class="nav-wrapper">
-      <a href="#!" class="brand-logo">Haptic Jacket Controller</a>
+      <span class="brand-logo">Haptic Jacket Controller</span>
       <ul class="right">
-        <li><a class="waves-effect waves-light btn purple lighten-2">Help<i class="material-icons right">help</i></a>
+        <li><a class="waves-effect waves-light btn purple lighten-2" onclick="show_help()">Help<i class="material-icons right">help</i></a>
         </li>
-        <li><a class="waves-effect waves-light btn purple lighten-2">Configure<i
+        <li><a class="waves-effect waves-light btn purple lighten-2" onclick="configure()">Configure<i
               class="material-icons right">settings</i></a></li>
-        <li><a class="waves-effect waves-light btn purple lighten-2">Scan Nearby Modules<i
+        <li><a class="waves-effect waves-light btn purple lighten-2" onclick="scan_modules()">Scan Nearby Modules<i
               class="material-icons right">search</i></a></li>
       </ul>
     </div>
   </nav>
 
-  <!--Main Body-->
-  <div class="main-body">
-    <img src="img/jacket.png" alt="jacket" width="100%">
-  </div>
+  <main>
 
+  </main>
   <!--JavaScript at end of body for optimized loading-->
   <script type="text/javascript" src="js/materialize.min.js"></script>
   <!-- You can also require other files to run in this process -->
