--- a/www/index.html
+++ b/www/index.html
@@ -53,7 +53,7 @@
 
 
     <nav class="navbar navbar-inverse navbar-embossed navbar-expand-lg navbar-lg" role="navigation">
-        <a class="navbar-brand" href="#">H</a>
+        <a class="navbar-brand" href="#">Haptic Jacket Controller</a>
         <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbar-collapse-04">
         </button>
 
@@ -80,7 +80,14 @@
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li>
-                    <a href="#" id="messagebox"> Help  </a>
+                    <a href="#" id="messagebox"> 
+                    </a>
+                </li>
+                <li>
+                   
+                </li>
+                <li>
+                    
                 </li>
                 <li>
                     <a href="#" onclick="show_help()"><span class="fui-question-circle"></span> Help  </a>
