--- a/www/index.html
+++ b/www/index.html
@@ -17,7 +17,7 @@
 
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Haptic-Jacket-GUI</title>
+    <title>Haptic Jacket Controller</title>
     <!-- Loading Bootstrap -->
     <link href="css/vendor/bootstrap.min.css" rel="stylesheet">
     <!-- Loading Flat UI -->
