--- a/www/index.html
+++ b/www/index.html
@@ -45,6 +45,8 @@
     <meta name="msapplication-TileImage" content="favicon/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
     <!--p5.js add-->
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="./js/jquery-3.3.1.min.js"></script>
     <script src="./scripts/p5.min.js"></script>
     <script src="./scripts/sketch.js"></script>
 </head>
@@ -110,15 +112,11 @@
 
 
     <!--Main Content Ends-->
-
-
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="js/jquery-3.3.1.min.js"></script>
     <!-- Bootstrap 4 requires Popper.js -->
-    <script src="js/popper.min.js"></script>
-    <script src="js/video.js"></script>
-    <script src="scripts/flat-ui-pro.js"></script>
-    <script src="scripts/application.js"></script>
+    <script src="./js/popper.min.js"></script>
+    <script src="./js/video.js"></script>
+    <script src="./scripts/flat-ui-pro.js"></script>
+    <script src="./scripts/application.js"></script>
 </body>
 
 </html>
