--- a/www/index.html
+++ b/www/index.html
@@ -60,13 +60,13 @@
 
         <div class="collapse navbar-collapse justify-content-between" id="navbar-collapse-04">
             <ul class="nav navbar-nav">
-                <li><a href="#" onclick="scan_modules()"><span class="fui-search"></span> Scan Nearby Modules </a></li>
+                <li><a href="#" onclick="scan_modules()"><span class="fui-search"></span>Edit Modules</a></li>
 
 
                 <li id="btn_configure">
                     <a href="#" onclick="configure()">
                         <span class="fui-gear"></span>
-                        Configure Positions
+                        Change Positions
                     </a>
                 </li>
 
@@ -105,6 +105,32 @@
 
 
     <!--Main Content Begins-->
+
+    <div class="demo-row">
+        <div class="demo-content-wide">
+            <div class="table-responsive">
+                <table class="table table-bordered">
+                    <thead>
+                        <tr>
+                            <th class="text-center">Module ID</th>
+                            <th class="text-center">IP Address</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td class="text-center">1</td>
+                            <td>
+                                <div class="form-group">
+                                    <input type="text" value="" placeholder="Un-Active" class="form-control">
+                                </div>
+                            </td>
+                        </tr>
+
+                    </tbody>
+                </table>
+            </div>
+        </div> <!-- /tables -->
+    </div> <!-- /row -->
 
     <main>
 
