--- a/www/index.html
+++ b/www/index.html
@@ -114,16 +114,14 @@
                         <tr>
                             <th class="text-center">Module ID</th>
                             <th class="text-center">IP Address</th>
+                            <th class="text-center">Port</th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr>
                             <td class="text-center">1</td>
-                            <td>
-                                <div class="form-group">
-                                    <input type="text" value="" placeholder="Un-Active" class="form-control">
-                                </div>
-                            </td>
+                            <td>a</td>
+                            <td>P</td>
                         </tr>
 
                     </tbody>
