--- a/www/index.html
+++ b/www/index.html
@@ -120,10 +120,9 @@
                     <tbody>
                         <tr>
                             <td class="text-center">1</td>
-                            <td>a</td>
-                            <td>P</td>
+                            <td class="text-center">a</td>
+                            <td class="text-center">P</td>
                         </tr>
-
                     </tbody>
                 </table>
             </div>
