--- a/www/index.html
+++ b/www/index.html
@@ -84,14 +84,14 @@
 
                 <li id="btn_show_config">
                     <a href="#" onclick="toggle_show_table()">
-                        <span class="fui-gear"></span>
-                        Show Configuration
+                        <span class="fui-eye"></span>
+                        Show Configuration Data
                     </a>
                 </li>
                 <li id="btn_hide_config">
                     <a href="#" onclick="toggle_hide_table()">
-                        <span class="fui-gear"></span>
-                        Hide Configuration
+                        <span class="fui-eye"></span>
+                        Hide Configuration Data
                     </a>
                 </li>
 
@@ -120,6 +120,7 @@
 
     <div class="demo-row" id="configtable">
         <div class="demo-content-wide">
+            <p>The following data is read from config.csv file. To edit, please manually edit config.csv file.</p>
             <div class="table-responsive">
                 <table class="table table-bordered">
                     <thead>
