--- a/www/index.html
+++ b/www/index.html
@@ -82,6 +82,15 @@
                     </a>
                 </li>
 
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+                <li>
+                    <a href="#" id="messagebox">
+                    </a>
+                </li>
+                <li>
+
+                </li>
                 <li id="btn_show_config">
                     <a href="#" onclick="toggle_show_table()">
                         <span class="fui-eye"></span>
@@ -94,23 +103,9 @@
                         Hide Configuration Data
                     </a>
                 </li>
-
-
-            </ul>
-            <ul class="nav navbar-nav navbar-right">
-                <li>
-                    <a href="#" id="messagebox">
-                    </a>
-                </li>
-                <li>
-
-                </li>
-                <li>
-
-                </li>
-                <li>
+                <!--<li>
                     <a href="#" onclick="show_help()"><span class="fui-question-circle"></span> Help </a>
-                </li>
+                </li>-->
             </ul>
         </div><!-- /.navbar-collapse -->
     </nav><!-- /navbar -->
@@ -120,7 +115,7 @@
 
     <div class="demo-row" id="configtable">
         <div class="demo-content-wide">
-            <p>The following data is read from config.csv file. To edit, please manually edit config.csv file.</p>
+            <p>The following data is read from config.csv file. To edit, please manually edit config.csv file and save, then restart this application.</p>
             <div class="table-responsive">
                 <table class="table table-bordered">
                     <thead>
