--- a/www/index.html
+++ b/www/index.html
@@ -115,7 +115,7 @@
 
     <div class="demo-row" id="configtable">
         <div class="demo-content-wide">
-            <p>The following data is read from config.csv file. To edit, please manually edit config.csv file and save, then restart this application.</p>
+            <p>The following data is read from config.csv file. To edit, please manually edit config.csv at <span id="configpath"></span> file and save, then restart this application.</p>
             <div class="table-responsive">
                 <table class="table table-bordered">
                     <thead>
