--- a/www/index.html
+++ b/www/index.html
@@ -88,6 +88,13 @@
                     </a>
                 </li>
 
+                <li id="btn_reset">
+                    <a href="#" onclick="launch_hand_control()">
+                        <span class="fui-radio-checked"></span>
+                        Gesture Control
+                    </a>
+                </li>
+
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li>
